# sVanillaTemplatePlugin

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
include/: IPlugin.h  PluginConfig.h
scripts/: clang_format_all.py
src/: PluginMessage.h  TemplateLogin.cpp  TemplateLogin.h  TemplatePlugin.cpp  TemplatePlugin.h  TemplatePluginCall.cpp  TemplatePluginCall.h  TemplatePluginLog.h
test/: .clang-format  CMakeLists.txt  test.cpp
test/plugin/: test_plugin.cpp
test/unit/: unit_test.cpp
